--- a/.github/workflows/push_event_workflow.yml
+++ b/.github/workflows/push_event_workflow.yml
@@ -11,7 +11,7 @@ jobs:
       uses : actions/checkout@v2
       
     - name : Install Packages 
-      run : pip install pytest fastapi
+      run : pip install pytest fastapi httpx
       
     - name : Run tests 
       run : pytest test.py
