--- a/requirements.txt
+++ b/requirements.txt
@@ -9,19 +9,28 @@ ecdsa==0.18.0
 fastapi==0.103.2
 gocept.pseudonymize==3.0
 h11==0.14.0
+httpcore==1.0.2
 httptools==0.6.0
+httpx==0.26.0
 idna==3.4
+iniconfig==2.0.0
+packaging==23.2
 passlib==1.7.4
+pluggy==1.3.0
 pyasn1==0.5.0
 pycparser==2.21
+pycryptodome==3.19.0
 pydantic==2.4.2
 pydantic_core==2.10.1
+pytest==7.4.4
 python-dotenv==1.0.0
 python-jose==3.3.0
 python-multipart==0.0.6
 PyYAML==6.0.1
 requests==2.31.0
+rncryptor==3.3.0
 rsa==4.9
+setuptools==69.0.2
 six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
@@ -31,4 +40,3 @@ uvicorn==0.23.2
 uvloop==0.18.0
 watchfiles==0.21.0
 websockets==11.0.3
-rncryptor==3.3.0
