--- a/.github/workflows/push_event_workflow.yml
+++ b/.github/workflows/push_event_workflow.yml
@@ -17,4 +17,4 @@ jobs:
       run : pip install -r requirements.txt
       
     - name : Run tests 
-      run : pytest test.py
+      run : pytest --fixtures test.py
