--- a/.github/workflows/push_event_workflow.yml
+++ b/.github/workflows/push_event_workflow.yml
@@ -16,5 +16,8 @@ jobs:
     - name : Install Packages 
       run : pip install -r requirements.txt
       
+    - name : start api
+    - run : uvicorn app.main:app --reload
+    
     - name : Run tests 
       run : pytest --fixtures test.py
