--- a/.github/workflows/push_event_workflow.yml
+++ b/.github/workflows/push_event_workflow.yml
@@ -17,7 +17,7 @@ jobs:
       run : pip install -r requirements.txt
       
     - name : start api
-    - run : uvicorn app.main:app --reload
+    - run : uvicorn app.main:app --reload &
     
     - name : Run tests 
       run : pytest --fixtures test.py
