--- a/.github/workflows/push_event_workflow.yml
+++ b/.github/workflows/push_event_workflow.yml
@@ -33,4 +33,4 @@ jobs:
     - name: Run tests 
       run: |
         source .venv/bin/activate
-        pytest test.pyest test.py
+        pytest test.py
